<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CarFragment">

   <TextView
       android:id="@+id/title_textView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       tools:text="@string/car"
       android:gravity="center"
       android:textSize="50sp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"/>

 <RelativeLayout
     android:id="@+id/driver_nameRL"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@id/title_textView">

  <TextView
      android:id="@+id/driver_textView"
      android:text="@string/driver"
      android:layout_centerVertical="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="17sp"
/>

  <EditText
      android:id="@+id/driver_editText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toEndOf="@id/driver_textView"
      android:inputType="text"
      android:hint="@string/driver_s_name"/>
 </RelativeLayout>


    <RelativeLayout
        android:id="@+id/regoRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/driver_nameRL">

        <TextView
            android:id="@+id/rego_textView"
            android:text="@string/rego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="17sp"
           />

        <EditText
            android:id="@+id/rego_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_toEndOf="@id/rego_textView"
            android:hint="@string/xxx_yyy"
          />

    </RelativeLayout>


<RelativeLayout
    android:id="@+id/start_time_RL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/regoRL">

    <Button
        android:id="@+id/btn_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/start_time" />


    <TextView
        android:id="@+id/start_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:textSize="18sp"
        tools:text="1st Break: 5/3/2020 19:15"/>

</RelativeLayout>

<RelativeLayout
    android:id="@+id/first_break_RL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/start_time_RL">

    <Button
        android:id="@+id/btn_first_break"
        android:text="@string/first_break"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/first_break_textView"
        tools:text="1st Break: 5/3/2020 19:15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>

  <RelativeLayout
      android:id="@+id/second_break_RL"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/first_break_RL">

      <Button
          android:id="@+id/btn_second_break"
          android:text="@string/second_break"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="invisible"
          tools:visibility="visible"
          android:layout_alignParentStart="true"/>

      <TextView
          android:id="@+id/second_break_textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:padding="10dp"
          android:visibility="invisible"
          tools:visibility="visible"
          android:textSize="18sp"
          tools:text="2nd Break: 5/3/2020 19:19" />

  </RelativeLayout>


<RelativeLayout
    android:id="@+id/end_time_RL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/second_break_RL"
    android:layout_marginBottom="10dp"
    app:layout_constraintBottom_toTopOf="@id/btn_save_log_entry">

    <Button
        android:id="@+id/btn_end_time"
        android:text="@string/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/end_time_textView"
        tools:text="End: 5/3/2020 19:23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>


    <Button
        android:id="@+id/btn_save_log_entry"
        android:text="@string/save_log_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_show_log_entry"
        app:layout_constraintTop_toBottomOf="@id/end_time_RL"/>

    <Button
        android:id="@+id/btn_show_log_entry"
        android:text="@string/show_log_entries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save_log_entry"
        />

    <Button
        android:id="@+id/btn_previous"
        android:text="@string/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_next" />

    <Button
        android:id="@+id/btn_next"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_previous"
        app:layout_constraintRight_toLeftOf="@id/btn_home" />

    <Button
        android:id="@+id/btn_home"
        android:text="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_next" />

</androidx.constraintlayout.widget.ConstraintLayout>